--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,12 +2,12 @@ FROM node:11.7.0
 
 MAINTAINER Rodrigo Villarreal <whatsup@rodrigovillarreal.mx>
 
-EXPOSE 5000
+EXPOSE 80
 
 ENV NODE_ENV production
 
 WORKDIR /var/www/html
 
-RUN npm install -g serve
+RUN npm install -g express
 
-CMD ./init.sh && serve -s build
+CMD ["node", "server.js"]
