--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
+    ],
+    "plugins": [
+      "babel-plugin-transform-class-properties"
     ]
   },
   "scripts": {
@@ -19,12 +22,13 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "axios": "^0.18.0",
+    "express": "^4.16.4",
+    "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   },
@@ -33,6 +37,7 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^2.0.0",
     "style-loader": "^0.23.1",
     "webpack-dev-server": "^3.1.14"
